--- a/docs/random-beacon/continuous-delivery.adoc
+++ b/docs/random-beacon/continuous-delivery.adoc
@@ -15,58 +15,9 @@ and only service at this time is the keep-client.  The RFC will focus on the
 keep-client as a result, however the solution is applicable outside the
 keep-client.  This RFC requires a basic understanding of Kubernetes objects.
 
-
-== Background
-
-There are *three* parts to deployments with keep-clients:
-
-=== Service Code and Service Configuration
-
-Deploying manually is a pain in the ass, even at a few client deployments (5) the manual process is untenable.  It's possible to manage this manually at such a low number of clients though you run a non-trivial risk of human error and deployment step repetition as as result.  This has an adverse effect on both the engineering experience and time efficiency.
-
-When scaling the solution beyond 5 clients manual configuration becomes untenable regardless of due-diligence.
-
-=== Contract Code: 
-
-The keep-client service leans on a collection of Ethereum contracts that are in development alongside the service. When contracts are changed they have to be deployed to the Ethereum network that the keep-clients are connecting to.
-
-This arrangement creates a dependency between the service configuration and contract code on a couple of levels:
-
-1. keep-client configuration files require contract addresses. These addresses change when contracts are updated.  This means we need to be aware of contract changes on the keep-client configuration side and make sure keep-client configuration files get updated contract addresses.
-
-2. We can assume keep-client code will be updated to utilize the latest contract functionality.  We can assume that this may or may not break keep-client behavior if the service is deployed against old contracts. This can potentially happen the other way around as well, where an updated contract is deployed and removes/changes functionality an old keep-client can't deal with. Therefore we must ensure both keep-clients and Keep contracts get deployed together, deploying contracts before clients due to client startup behavior.
-
-=== Current Functionality
-
-We currently have a single cloud environment (`keep-dev`) that is in a mixed state of continuous delivery and manual configuration.  Current functionality will be outlined as the "three parts" described in Background.
-
-==== keep-client Service Deployment
-
-keep-client service deployment is done automatically whenever code is merged to master.  This is facilitated by a lightweight tool called https://keel.sh/[Keel that runs in the Kubernetes cluster.  This is a pull based deployment mechanism where Keel is subscribed to our container registry and listens for publish events.  On image publish Keel checks Kubernetes deployments for annotations and matches labels set there for what should be deployed. On match Keel pulls the image and does a deployment.
-
-==== keep-client Configuration
-
-Our first goal was to separate service configuration from the service image. This exists in the form of each deployed keep-client having its own Kubernetes
-ConfigMap. This allows for the use of a "standard" keep-client service image across all deployed keep-clients. There are two pieces of data that make up a keep-client ConfigMap:
-
-1. keep-client-config.toml
-2. Ethereum keyfile
-
-Configuration of the data that populates the ConfigMaps and ConfigMaps themselves are updated *manually*.
-
-==== Ethereum Contract Deployment
-
-Ethereum contracts and subsequent steps are managed against `keep-dev` *manually*. This is done from a local machine on the `keep-dev` VPN using Truffle. It's worth noting that when contracts are deployed we need to do the following:
-
-1. Ensure Ethereum accounts are unlocked.
-2. Stake Ethereum accounts with KEEP tokens.
-3. Update the keep-client configuration files and ConfigMaps with new contract
-   addresses. (see previous section)
-4. re-deploy keep-clients.
-
 === Implementation
 
-To reiterate:  The implementation will aim to automate
+The implementation will automate
 `Ethereum Contract Deployment` and `keep-client Configuration`.
 `keep-client service deployment` is already automated via Keel.
 
@@ -133,3 +84,51 @@ is a property of a client (because we’ve assigned it so).
 Environment context property `ETH_HOSTNAME` gets configured at the Circle context
 level and baked into the `InitCointainer` and `KEEP_CLIENT_ETH_ACCOUNT`
 gets configured on the Kube deployment.
+
+== Background
+
+There are *three* parts to deployments with keep-clients:
+
+=== Service Code and Service Configuration
+
+Deploying manually is a pain in the ass, even at a few client deployments (5) the manual process is untenable.  It's possible to manage this manually at such a low number of clients though you run a non-trivial risk of human error and deployment step repetition as as result.  This has an adverse effect on both the engineering experience and time efficiency.
+
+When scaling the solution beyond 5 clients manual configuration becomes untenable regardless of due-diligence.
+
+=== Contract Code: 
+
+The keep-client service leans on a collection of Ethereum contracts that are in development alongside the service. When contracts are changed they have to be deployed to the Ethereum network that the keep-clients are connecting to.
+
+This arrangement creates a dependency between the service configuration and contract code on a couple of levels:
+
+1. keep-client configuration files require contract addresses. These addresses change when contracts are updated.  This means we need to be aware of contract changes on the keep-client configuration side and make sure keep-client configuration files get updated contract addresses.
+
+2. We can assume keep-client code will be updated to utilize the latest contract functionality.  We can assume that this may or may not break keep-client behavior if the service is deployed against old contracts. This can potentially happen the other way around as well, where an updated contract is deployed and removes/changes functionality an old keep-client can't deal with. Therefore we must ensure both keep-clients and Keep contracts get deployed together, deploying contracts before clients due to client startup behavior.
+
+=== Current Functionality
+
+We currently have a single cloud environment (`keep-dev`) that is in a mixed state of continuous delivery and manual configuration.  Current functionality will be outlined as the "three parts" described in Background.
+
+==== keep-client Service Deployment
+
+keep-client service deployment is done automatically whenever code is merged to master.  This is facilitated by a lightweight tool called https://keel.sh/[Keel that runs in the Kubernetes cluster.  This is a pull based deployment mechanism where Keel is subscribed to our container registry and listens for publish events.  On image publish Keel checks Kubernetes deployments for annotations and matches labels set there for what should be deployed. On match Keel pulls the image and does a deployment.
+
+==== keep-client Configuration
+
+Our first goal was to separate service configuration from the service image. This exists in the form of each deployed keep-client having its own Kubernetes
+ConfigMap. This allows for the use of a "standard" keep-client service image across all deployed keep-clients. There are two pieces of data that make up a keep-client ConfigMap:
+
+1. keep-client-config.toml
+2. Ethereum keyfile
+
+Configuration of the data that populates the ConfigMaps and ConfigMaps themselves are updated *manually*.
+
+==== Ethereum Contract Deployment
+
+Ethereum contracts and subsequent steps are managed against `keep-dev` *manually*. This is done from a local machine on the `keep-dev` VPN using Truffle. It's worth noting that when contracts are deployed we need to do the following:
+
+1. Ensure Ethereum accounts are unlocked.
+2. Stake Ethereum accounts with KEEP tokens.
+3. Update the keep-client configuration files and ConfigMaps with new contract
+   addresses. (see previous section)
+4. re-deploy keep-clients.
