--- a/docs/random-beacon/network-interface.adoc
+++ b/docs/random-beacon/network-interface.adoc
@@ -26,8 +26,8 @@ Bond: A bond is collateral provided by a keep operator that disincentivizes coll
 
 ==== sMPC cluster requirements
 
-Each off-chain client of sMPC cluster should be a separate process. Keep Core 
-client should be a separate client than Keep tECDSA client:
+Each off-chain client of sMPC cluster is a separate process. Keep Core client will is a separate client than Keep tECDSA client:
+
 ```
 ./keep-core
 ./keep-tecdsa 
@@ -35,53 +35,29 @@ client should be a separate client than Keep tECDSA client:
 
 (The above snippet is just an example for the first keep type)
 
-Each staker is required to run Keep Core client. Running Keep tECDSA client is 
-optional. Eventually, we hope other developers will build their own clients.
+Each staker is required to run Keep Core client. Running Keep tECDSA client is optional. Eventually, we hope other developers will build their own clients.
 
 ==== Bonding requirement
 
-Some applications requires a bond to be provided by stakers. Stakers who want to 
-participate in the given protocol need to opt-in and provide the required bond. 
-A bond can  be provided in ETH or ERC-20 token specific to the application.
+Some applications requires a bond to be provided by stakers. Stakers who want to participate in the given protocol need to opt-in and provide the required bond. A bond can  be provided in ETH or ERC-20 token specific to the application.
 
 === Types of keeps
 
-There are two first types of keeps that are going to be offered by Keep Network: 
-tECDSA keep and bonded tECDSA keep.
+There are two first types of keeps that are going to be offered by Keep Network, tECDSA keep and bonded tECDSA keep:
 
-tECDSA keep:: tECDSA keep is a type of a keep allowing to sign data with 
-              a uniquely generated private key for each new keep instance. Key 
-              generation and signing are based on trustless, threshold protocols 
-              executed by groups of signers forming an sMPC cluster for this 
-              type of a keep. 
+tECDSA keep: tECDSA keep is a type of a keep allowing to sign data with a uniquely generated private key for each new keep instance. Key generation and signing are based on trustless, threshold protocols executed by groups of signers forming an sMPC cluster for this type of a keep. 
 
-bonded tECDSA keep:: bonded tECDSA keep is a tECDSA keep with an extra bonding 
-                     logic over a vanilla tECDSA keep. Each staker being a part 
-                     of sMPC cluster for this type of keep needs to provide an 
-                     extra bond required for each new instance of bonded tECDSA 
-                     keep. The bond can be slashed as a result of inactivity or 
-                     misbehaviour during tECDSA key generation or signing.
+bonded tECDSA keep: bonded tECDSA keep is a tECDSA keep with an extra bonding logic over a vanilla tECDSA keep. Each staker being a part of sMPC cluster for this type of keep needs to provide an extra bond required for each new instance of bonded tECDSA keep. The bond can be slashed as a result of inactivity or misbehaviour during tECDSA key generation or signing.
 
 === Implementation
 
 ==== Keep factory
 
-Keep factory is a smart contract used to create instances of a keep of a certain 
-type. Each type of keep has a separate keep factory. Each keep factory is an 
-operator contract and has to be sanctioned by stakers as such. Application 
-developers may interact with factory directly if they decide to. The network
-can not guarantee that old factories will be still backed up by enough stakers, 
-though.
+Keep factory is a smart contract used to create instances of a keep of a certain type. Each type of keep has a separate keep factory. Each keep factory is an operator contract and has to be sanctioned by stakers as such. Application developers may interact with factory directly if they decide to. The network can not guarantee that old factories will be still backed up by enough stakers, though.
 
 ==== Vendor
 
-A vendor is a smart contract with which the application interacts to obtain the
-new instance of a keep of the given type backed by enough stakers so that all 
-operations on the created keep can go smoothly. Vendor interacts with keep 
-factories choosing the one most recent if it is backed by enough stakers. Each  
-vendor is a service contract and does not have to be sanctioned by stakers. Each 
-vendor can operate on several versions of keep factory to allow for a smooth 
-upgrade process.
+A vendor is a smart contract with which the application interacts to obtain the new instance of a keep of the given type backed by enough stakers so that all operations on the created keep can go smoothly. Vendor interacts with keep factories choosing the one most recent if it is backed by enough stakers. Each vendor is a service contract and does not have to be sanctioned by stakers. Each vendor can operate on several versions of keep factory to allow for a smooth upgrade process.
 
 ==== Keep registry
 
