--- a/docs/random-beacon/upgrade-authorizations.adoc
+++ b/docs/random-beacon/upgrade-authorizations.adoc
@@ -1,30 +1,10 @@
-:toc: macro
-
-= RFC 11: Authorizations in the upgrade scheme
-
 :icons: font
 :numbered:
 toc::[]
 
 == Background
 
-Securely upgradeable work contracts
-are important for protecting stakers' tokens.
-The current design for dividing work contracts
-into operator contract and service contract components
-permits secure upgrades of operator contracts
-without interfering with service functionality.
-To gain the theoretical benefits from this scheme,
-it is necessary to specify how contract upgrades should be authorized,
-and by whom.
-
-=== Current Functionality
-
-In link:rfc-9-upgradeable-contract-components.adoc[RFC 9: Upgrading contracts by separate components],
-the division between operator and service contracts is established.
-Apart from the existing consensus
-that stakers should authorize each operator contract individually,
-there is no overarching design for secure contract upgrades yet.
+Securely upgradeable work contracts are important for protecting stakers' tokens. The current design for dividing work contracts into operator contract and service contract components permits secure upgrades of operator contracts without interfering with service functionality. To gain the theoretical benefits from this scheme, it is necessary to specify how contract upgrades should be authorized, and by whom.
 
 == Proposal
 
