--- a/docs/random-beacon/upgrade-authorizations.adoc
+++ b/docs/random-beacon/upgrade-authorizations.adoc
@@ -6,93 +6,26 @@ toc::[]
 
 Securely upgradeable work contracts are important for protecting stakers' tokens. The current design for dividing work contracts into operator contract and service contract components permits secure upgrades of operator contracts without interfering with service functionality. To gain the benefits from this scheme, we specify here how contract upgrades are authorized, and by whom.
 
-== Proposal
-
-To achieve secure upgrades, this RFC proposes a scheme where the upgrade process is centered on operator contracts, which tie all components of the network together.
-
-Operator contracts are subject to approval
-globally on a _registry_,
-in their respective _service contracts_,
-and individually from each staker in the _staking contract_.
-This provides multilayered protection
-against a variety of different risks.
-
-Other contracts such as service contracts and staking contracts
-are hard-coded in operator contracts,
-so attackers are prevented from inserting arbitrary contracts of any type
-without needing to have separate approval processes
-for different contract types.
-
-Different keys are used in different parts of the upgrade process.
-The roles of global _Registry Keeper_ and _Panic Button_,
-service contract-specific _Operator Contract Upgraders_,
-and staker-specific _Authorizers_,
-are used to divide the responsibilities
-and to provide resiliency against compromise of individual keys.
-A _Governance_ scheme can be used to rekey the roles
-to recover from non-catastrophic compromise.
-
-The multilayered approach permits upgrading staking contracts,
-or even the token itself,
-without disrupting user experience on the service contract.
-
-=== Goal
-
-The main goals are to provide a smooth upgrade path for future functionality,
-limiting the impact of single-key compromise,
-and protecting stakers' funds from ever being subject
-to code they haven't individually authorized.
-
 === Roles
 
 ==== Governance
+Governance is the final arbiter of authority in the Keep Network. The role of Governance in the upgrade process is to enable recovery from key compromise by rekeying other roles.
 
-Governance is the final arbiter of authority in the Keep Network.
-While exact details of the implementation of Governance
-are out of scope for this RFC,
-the role of Governance in the upgrade process
-is to enable recovery from key compromise by rekeying other roles.
+Governance has the authority to change the addresses of the _Registry Keeper_, _Panic Button_, and the service contracts' _Operator Contract Upgraders_.
 
-Governance has the authority to change the addresses of
-the _Registry Keeper_, _Panic Button_,
-and the service contracts' _Operator Contract Upgraders_.
+The rekeying process prioritize security over convenience to the greatest feasible extent, being unsuitable for ordinary upgrades but permitting recovery from partial system compromise under extraordinary circumstances.
 
-The rekeying process should prioritize security over convenience
-to the greatest feasible extent,
-being unsuitable for ordinary upgrades
-but permitting recovery from partial system compromise
-under extraordinary circumstances.
+===== Registry Keeper
 
-==== Registry Keeper
+The Registry Keeper maintains the global _registry_ of approved operator contracts. Each operator contract must be approved by the Registry Keeper before it can be authorized by a staker or used by a service contract.
 
-The Registry Keeper maintains the global _registry_
-of approved operator contracts.
-Each operator contract must be approved by the Registry Keeper
-before it can be authorized by a staker
-or used by a service contract.
+===== Panic Button
 
-The Registry Keeper can be rekeyed by _Governance_.
+The Panic Button can disable malicious or malfunctioning contracts that have been previously approved by the Registry Keeper. When a contract is disabled by the Panic Button, its status on the _registry_ changes to reflect this, and it becomes ineligible to penalize stakers. Contracts disabled by the Panic Button can not be reactivated.
 
-==== Panic Button
+===== Operator Contract Upgrader
 
-The Panic Button can disable malicious or malfunctioning contracts
-that have been previously approved by the Registry Keeper.
-When a contract is disabled by the Panic Button,
-its status on the _registry_ changes to reflect this,
-and it becomes ineligible to penalize stakers.
-Contracts disabled by the Panic Button can not be reactivated.
-
-The Panic Button can be rekeyed by _Governance_.
-
-==== Operator Contract Upgrader
-
-Each service contract has a Operator Contract Upgrader
-whose purpose is to manage operator contracts for that specific service contract.
-The Operator Contract Upgrader can add new operator contracts
-to the service contract's operator contract list,
-and deprecate old ones.
-
-The Operator Contract Upgraders can be rekeyed by _Governance_.
+Each service contract has a Operator Contract Upgrader whose purpose it is to manage operator contracts for that specific service contract. The Operator Contract Upgrader can add new operator contracts to the service contract's operator contract list, and deprecate old ones.
 
 ==== Authorizer
 
